--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
 			})();
 		</script>
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
